# Advent-of-Code

2021/day01/: day01.cabal  package.yaml  stack.yaml
2021/day01/app/: Main.hs
2021/day02/: day02.cabal  stack.yaml
2021/day02/.stack-work/: stack.sqlite3
2021/day02/.stack-work/ghci/01682000/: cabal_macros.h
2021/day02/.stack-work/ghci/e0ede6b8/: cabal_macros.h
2021/day02/src/: Main.hs
2021/day03/: day03.cabal
2021/day03/.stack-work/: stack.sqlite3
2021/day03/.stack-work/ghci/791eff46/: cabal_macros.h
2021/day03/src/: Main.hs
2021/day04/: day04.cabal
2021/day04/.stack-work/: stack.sqlite3
2021/day04/.stack-work/ghci/339c188b/: cabal_macros.h
2021/day04/src/: Main.hs
2021/day05/: day05.cabal
2021/day05/.stack-work/: stack.sqlite3
2021/day05/.stack-work/ghci/075d3ff2/: cabal_macros.h
2021/day05/src/: Main.hs
2021/day06/: day06.cabal  stack.yaml
2021/day06/src/: Main.hs
