name:                day06
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/day06#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day06
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       mtl >= 2.2.2,
                       split >= 0.2.3.4
